gdb/testsuite/gdb.base/gnu_vector.c
@@ -42,6 +42,19 @@ longlong2 ll2 = {1, 2};
 float2 f2 = {1, 2};
 double2 d2 = {1, 2};
 
+union
+{
+  int i;
+  char cv __attribute__ ((vector_size (sizeof (int))));
+} union_with_vector_1;
+
+struct
+{
+  int i;
+  char cv __attribute__ ((vector_size (sizeof (int))));
+  float4 f4;
+} struct_with_vector_1;
+
 int
 main ()
 {
